--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -11,6 +11,7 @@
 $primary: #fafafa;
 $secondary: #212121;
 
+@import "./layout/responsive_mixin";
 @import "./layout/icons";
 
 * {
@@ -64,118 +65,29 @@ body {
       border: 3px solid $secondary;
       background-color: transparent;
     }
+
+    @include responsive_desktop() {
+      max-width: 60%;
+      button {
+        margin: 1rem 3rem;
+      }
+    }
+
+    @include responsive_mobile() {
+      div {
+        display: grid;
+        place-items: center;
+
+        button {
+          width: 80%;
+          margin: 1rem 0;
+        }
+      }
+    }
   }
 
   // NAVBAR STYLES
-  #nav-toggle {
-    position: absolute;
-    visibility: hidden;
-
-    &:checked {
-      ~ #theme-select {
-        display: flex;
-      }
-
-      ~ #navbar {
-        display: grid;
-      }
-
-      ~ #icon-menu {
-        :first-child {
-          position: fixed;
-          transform: rotate(45deg);
-        }
-
-        :nth-child(2) {
-          display: none;
-          transition: display 0.5s linear;
-        }
-
-        :last-child {
-          transform: rotate(-45deg);
-        }
-      }
-    }
-  }
-  #icon-menu {
-    display: block;
-    position: fixed;
-    cursor: pointer;
-    top: 40px;
-    left: 40px;
-    z-index: 10;
-
-    .line {
-      height: 3px;
-      width: 30px;
-      background-color: $secondary;
-      border-radius: 2px;
-      margin: 5px;
-      transition: all 0.3s ease-out;
-    }
-  }
-
-  @import "./layout/themes";
-
-  #navbar {
-    top: 0;
-    z-index: 5;
-    width: 400px;
-    height: 100vh;
-    background-color: $primary;
-
-    display: none;
-    justify-items: center;
-    grid-template-rows: 0.8fr 3fr;
-    border-right: 1px solid $secondary;
-    transition: background-color 0.4s ease-out;
-
-    #logo {
-      margin-top: 110px;
-      font-size: 1.3em;
-      font-weight: bold;
-      text-decoration: none;
-      color: $secondary;
-      user-select: none;
-    }
-
-    #nav-links {
-      width: 60%;
-      text-transform: uppercase;
-      overflow: hidden;
-
-      a,
-      li {
-        pointer-events: auto;
-        margin: 1.2em 0;
-        list-style-type: none;
-        text-decoration: none;
-        color: $secondary;
-      }
-
-      a {
-        position: relative;
-
-        &::before {
-          z-index: -1;
-          position: absolute;
-          left: -100%;
-          top: 100%;
-          content: "";
-          height: 1.8px;
-          width: 100%;
-          background-color: $secondary;
-          transition: all 0.4s ease-out;
-        }
-
-        &:hover {
-          &::before {
-            left: 0;
-          }
-        }
-      }
-    }
-  }
+  @import "./layout/navbar";
 
   #container-sections {
     width: 100%;
@@ -269,43 +181,6 @@ body {
         }
       }
     }
-  }
-}
-
-// ==== MEDIA QUERIES ====
-// Desktop
-@media (min-width: 35em) {
-  #exhibit-1,
-  #exhibit-2 {
-    max-width: 60%;
-    button {
-      margin: 1rem 3rem;
-    }
-  }
-
-  #navbar {
-    position: sticky;
-  }
-}
-// Mobile
-@media (max-width: 35em) {
-  #exhibit-1,
-  #exhibit-2 {
-    div {
-      display: grid;
-      place-items: center;
-
-      button {
-        width: 80%;
-        margin: 1rem 0;
-      }
-    }
-  }
-
-  #navbar {
-    top: 0;
-    position: fixed;
-    max-width: 300px;
   }
 }
 
