--- a/src/scss/layout/_navbar.scss
+++ b/src/scss/layout/_navbar.scss
@@ -69,6 +69,14 @@
     top: 0;
     position: fixed;
     max-width: 300px;
+
+    // #nav-links {
+    //   a {
+    //     &:focus {
+
+    //     }
+    //   }
+    // }
   }
 
   #logo {
