--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -188,7 +188,7 @@ body {
   font-size: 0.6em;
   font-weight: bold;
   color: $primary;
-  background-color: #21212198;
+  background-color: $secondary;
   border-radius: 30px;
   display: none;
 
@@ -201,9 +201,30 @@ body {
     height: 0;
     border-style: solid;
     border-width: 0 6px 6px 6px;
-    border-color: transparent transparent #21212198;
+    border-color: transparent transparent $secondary;
     transform: rotate(180deg);
   }
+}
+
+/* ===== Scrollbar CSS ===== */
+/* Firefox */
+* {
+  scrollbar-width: auto;
+  scrollbar-color: rgba(0, 0, 0, 0.555);
+}
+
+/* Chrome, Edge, and Safari */
+*::-webkit-scrollbar {
+  width: 12px;
+}
+
+*::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+*::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.555);
+  border-radius: 10px;
 }
 
 // ==== ANIMATIONS ====
